fix spacing of header menu layout

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@
 }
 
 .menu {
-    margin-top: 46px;
+    margin-top: 57px;
     list-style-type: none;
 }
 
@@ -48,7 +48,7 @@
 
 .menu a {
     font-size: 14px;
-    line-height: 3.43;
+    padding: 10px 13px;
     letter-spacing: 1.4px;
     text-align: right;
     color: #8c8c8c;
@@ -94,6 +94,9 @@
 }
 
 .slider-box a {
+    /*
+    box-sizing: border-box;
+    padding: 0 31px;*/
     display: block;
     float: left;
     border-radius: 22.5px;
@@ -101,13 +104,16 @@
     background-color: #ffffff;
     font-size: 18px;
     font-weight: bold;
-    line-height: 1.33;
     letter-spacing: 3.6px;
     text-align: center;
     color: #212121;
     text-decoration: none;
     text-transform: uppercase;
     padding: 16px 29px;
+}
+
+.slider-box a:hover {
+    box-shadow: 0px 2px 4.9px 0.2px rgba(66, 666, 33, 0.35);
 }
 
 
